app/javascript/css/components.css
a.underlined {
  @apply relative border-b-4 border-transparent;

  &::after {
    @apply absolute block h-1 w-0;

    content: '';
    bottom: -4px;
    transition: width .25s;
  }

  &:hover::after {
    @apply w-full;
  }
}

a.underlined-black {
  @apply text-gray-900 border-gray-300;

  &::after {
    @apply bg-gray-900;
  }
}

.button {
  @apply inline-flex items-center text-white bg-gray-900 py-2 px-5 uppercase tracking-wide font-semibold;

  &:hover {
    @apply bg-black .shadow-lg;
  }
}

.field {
  @apply border-2 px-5 py-3 w-full text-lg border-gray-200;

  &:focus {
    @apply border-gray-400;
  }
}

.dropdown-link {
  & .dropdown-arrow {
    transition: all 0.3s ease-in-out;
  }

  &:hover {
    & .dropdown-arrow {
      transform: rotate(180deg);
    }

    & .dropdown-content {
      @apply block;
    }
  }
}

.dropdown-list {
  & .dropdown-list-item {
    @apply flex px-4 py-2 border-b border-gray-200 cursor-pointer bg-white items-center;

    &:last-child {
      @apply border-none;
    }

    &:hover {
      @apply bg-gray-100;
    }
  }
}

.tag {
  @apply flex items-center border px-3 text-xs uppercase border-gray-400 tracking-wide text-gray-600;
}

@screen lg {
  @apply text-sm;
}

